Fixed trades panels blurring

--- a/projects/terminal-widgets-lib/src/widgets/scalper-order-book/components/trades-panel/trades-panel.less
+++ b/projects/terminal-widgets-lib/src/widgets/scalper-order-book/components/trades-panel/trades-panel.less
@@ -5,5 +5,8 @@ ats-trades-panel {
 
     min-width: 1px;
   }
-}
 
+  canvas {
+    display: block;
+  }
+}
